[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "defuse-py"
version = "0.1.0"
description = "Async Python wrapper for the NEAR Intents 1Click Swap API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
